samples/_failures_safe/1761600588_6077d4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dbf97c9f.c: In function ‘main’:
./samples/SAFE/__tmp_dbf97c9f.c:127:9: error: expected expression at end of input
  127 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_dbf97c9f.c:127:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_dbf97c9f.c:127:9: error: expected declaration or statement at end of input
